--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "motaka",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "ngrok": "ngrok http 7000"
   },
   "keywords": [],
-  "author": "Arpify",
+  "author": "Grisha",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-mongodb-session": "^3.1.1",
@@ -31,5 +31,8 @@
     "dotenv": "^16.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
