--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon --require dotenv/config server.js",
     "ngrok": "ngrok http 7000"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
@@ -28,7 +29,6 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   },
