--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.4",
     "nexmo": "^2.9.1",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
