chnaged nexmo options

--- a/config.env
+++ b/config.env
@@ -11,6 +11,6 @@ FB_CLIENT_URL = http://localhost:7000/facebook/verify
 GOOGLE_CLIENT_ID = 672599364365-tpf3f4okr12q4la8su1vrdhhd8gmsm2f.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 GOOGLE_CLIENT_URL = http://localhost:7000/google/verify
-NEXMO_KEY = e0c3f3a2
-NEXMO_SECRET = 0MWN4q6nkOe5LFEw
+NEXMO_KEY = 899e0871
+NEXMO_SECRET = OIVzVcpP5PaGYSnA
 
