changed project basics

--- a/config.env
+++ b/config.env
@@ -13,4 +13,5 @@ GOOGLE_CLIENT_SECRET = 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
 GOOGLE_CLIENT_URL = http://localhost:7000/google/verify
 NEXMO_KEY = 899e0871
 NEXMO_SECRET = OIVzVcpP5PaGYSnA
+JWT_SECRET = QTbXdhE64sQxBHMRfCZkQTOIVzVcpP5PaGYSnA
 
