--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
-    "multer": "^1.4.4",
     "nexmo": "^2.9.1",
     "nodemailer": "^6.7.3",
     "passport": "^0.5.2",
