--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
