--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ FB_CLIENT_URL = http://localhost:7000/facebook/verify
 GOOGLE_CLIENT_ID = 672599364365-tpf3f4okr12q4la8su1vrdhhd8gmsm2f.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 GOOGLE_CLIENT_URL = http://localhost:7000/google/verify
-NEXMO_KEY = 899e0871
-NEXMO_SECRET = OIVzVcpP5PaGYSnA
+NEXMO_KEY = 195abd24
+NEXMO_SECRET = ZZMQVGVv96hYrt2a
 JWT_SECRET = QTbXdhE64sQxBHMRfCZkQTOIVzVcpP5PaGYSnA
 
