--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
     "express-validator": "^6.14.0",
+    "google-auth-library": "^8.0.2",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "nexmo": "^2.9.1",
     "nodemailer": "^6.7.3",
+    "npm": "^8.9.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
