--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "nexmo": "^2.9.1",
+    "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.3",
     "npm": "^8.9.0",
     "pug": "^3.0.2"
