Search function work

--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 PORT = 7000
-DATABASE_URI = mongodb+srv://admin:admin@motaka.uuvwz.mongodb.net/motaka?retryWrites=true&w=majority    
+DATABASE_URI =mongodb+srv://admin:bQ6gpdM2Rr8WSpvg@motaka.dxt1j.mongodb.net/Motaka?retryWrites=true&w=majority    
 DATABASE_LOCAL = mongodb://localhost:27017/Motaka_db
-DATABASE_ATLAS = mongodb+srv://admin:admin@motaka.uuvwz.mongodb.net/motaka?retryWrites=true&w=majority
+DATABASE_ATLAS = mongodb+srv://admin:bQ6gpdM2Rr8WSpvg@motaka.dxt1j.mongodb.net/Motaka?retryWrites=true&w=majority
 DATABASE_SESSION = mongodb://localhost:27017/motakaSessions
 SESSION_SECRET = YW0ZPgQYaS2PLhPpsf73chCoDSq4CqPFRAaO6jco
 FB_CLIENT_ID = 970086670375937
