--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.3",
     "npm": "^8.9.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
