--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "motaka-backend",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "ngrok": "ngrok http 7000"
   },
   "keywords": [],
-  "author": "Grisha&Mamikon",
+  "author": "Grisha",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
